--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:authorities="com.example.android.sunshine.app"
             android:name=".data.WeatherProvider"
             tools:ignore="ExportedContentProvider" />
+        <service android:name=".service.SunshineService"/>
     </application>
 
 </manifest>
